vlib/v/checker/tests/defer_use_multi_return_value_without_index.out
vlib/v/checker/tests/defer_use_multi_return_value_without_index.vv:3:11: error: `res` requires an index of the returned value
    1 | fn test() (string, string) {
    2 |     defer {
    3 |         println($res())
      |                 ~~~~~~
    4 |     }
    5 |     return 'test', 'test2'
vlib/v/checker/tests/defer_use_multi_return_value_without_index.vv:3:3: error: `println` can not print void expressions
    1 | fn test() (string, string) {
    2 |     defer {
    3 |         println($res())
      |         ~~~~~~~~~~~~~~~
    4 |     }
    5 |     return 'test', 'test2'
