vlib/v/checker/tests/defer_use_multi_return_value_without_index.vv
fn test() (string, string) {
	defer {
		println($res())
	}
	return 'test', 'test2'
}
